# pm

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  skills-lock.json
backend/: AGENTS.md  ai.py  auth.py  conftest.py  database.py  main.py  models.py  pyproject.toml  test_ai.py  test_api.py  test_archive.py  test_assignment_search.py  test_auth.py  test_board_sharing.py  test_boards.py  test_card_metadata.py  test_card_ops.py  test_checklist.py  test_comments.py  test_dependencies.py  test_export_activity.py  test_labels_wip.py  test_notifications.py  test_sprints.py  test_stats.py  test_time_tracking.py  test_users.py
backend/data/: kanban.db
backend/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
backend/static/_next/static/chunks/: 0304185b8f7261a9.css  0353a462a7939d1a.css  0b7996de4b248f8d.css  139456c903d715a4.js  17fa0c64d44d2a13.css  3a8665167a1b6e92.css  3f0c9db939dfebaa.js  450b0237f19ff0d1.css  4e578da5d3e0efc2.js  6943bdf5d80d7b18.js  743a439e5d5042ef.js  79ac471ea7f6edc5.css  83b1fe5d064869f1.js  9f82d32d0dd0fad9.js  afd98aae59827a2b.js  b0b798c2f1c05859.css  b2c2eb6b4719147e.js  bcefd3fc48f9774f.js  bdcebf0831e57c17.js  d1d05633d366a63c.js  d1f1b977d0d85d1b.css  d73bf5be9851fc0a.js  dabce658ebbf3ec2.js  (+5 more)
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
docs/: PLAN.md  (+5 more)
(+47 files in other folders)
